feat: implement transaction categorization and enhance category management